--- a/client_final/package.json
+++ b/client_final/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.0",
     "gh-pages": "^2.1.1",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "raf": "^3.4.1",
     "react": "^16.9.0",
@@ -16,6 +17,7 @@
     "react-highlight-words": "^0.16.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.1.2",
+    "react-speech-recognition": "^2.0.4",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "styled-components": "^4.4.1",
