--- a/client_final/package.json
+++ b/client_final/package.json
@@ -8,7 +8,9 @@
     "antd": "^3.25.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.0",
+    "fetch-jsonp": "^1.1.3",
     "gh-pages": "^2.1.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "raf": "^3.4.1",
